<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">WhisperVault</string>
    <string name="voice_input">WhisperVault Voice Input</string>
    <string name="need_record_audio_permission">"RECORD_AUDIO permission is not granted"</string>
    <string name="download_model">Download Model</string>
    <string name="status">Status:</string>
    <string name="append">Append:</string>
    <string name="translate">Translate to English:</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="info">Info</string>
    <string name="processing">Processing…</string>
    <string name="start">START</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give WhisperVault a star on GitHub!</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="please_wait">Please wait…</string>
    <string name="exit_button">Exit</string>
    <string name="record_button">Record</string>
    <string name="return_button">Return</string>
    <string name="delete_button">Delete</string>
    <string name="model_output">Model output</string>
    <string name="processing_done">Processing done in\u2009</string>
    <string name="language">Language:</string>
    <string name="mode_transcription">transcription</string>
    <string name="mode_translation">translation</string>
    <string name="instructions">Press and hold the microphone button while speaking.</string>
    <string name="simple_chinese">Simplified Chinese:</string>
    <string name="text_to_speech">Text-to-speech:</string>
    <string name="tts_language_not_supported">TTS: Language not supported</string>
    <string name="tts_initialization_failed">TTS: Initialization failed</string>
    <string name="auto_button">Auto mode</string>
    <string name="continuous_button">Continuous mode</string>
    <string name="listening">Listening…</string>
    <string name="recording">Recording…</string>
    <string name="error_no_input">No voice input received</string>
    <string name="install_model">Install model</string>
    <string name="auto_lang">Detect language</string>
    <string name="settings">Settings</string>
    <string name="settings_voice_input">Voice Input</string>
    <string name="settings_ime">Input Method (IME) &amp; Test</string>
    <string name="settings_general">General</string>
    <string name="whisper_test">WhisperVault</string>
    <string name="settings_minimum_silence">Minimum silence before stopping (ms)</string>
    <string name="lang1">Language 1</string>
    <string name="lang2">Language 2</string>
    <string name="setting_bluetooth">Use Bluetooth devices</string>
    <string name="model_selection_label">Model:</string>
    <string name="default_model_description">Small &#8212; balanced, good accuracy (~250 MB)</string>
    <string name="downloading_model">Downloading model: %1$s</string>

</resources>
